# Snow-Devil

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_CONTEXT_IMPLEMENTATION.md  PR_BODY.md  README.md  eslint.config.js  events_dump.json  fix_all.ps1  fix_analytics.ps1  fix_ciactivity.ps1  fix_ciactivity2.ps1  fix_migrations.ps1  fix_migrations2.ps1  fix_record.ps1  fix_row.ps1  fix_row_2.ps1  fix_row_3.ps1  fix_sync_again.ps1  fix_sync_again2.ps1  fix_sync_again3.ps1  fix_sync_again4.ps1  fix_sync_exports.ps1  fix_sync_id.ps1  fix_test.ps1  fix_timeout.ps1  fix_ts.ps1  fix_unused.ps1  fix_unused2.ps1  fix_useAnalyticsData.ps1  index.html  instrument.ps1  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pr14.diff  pr14_api.diff  pr14_files.json  query.py  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: device_flow.rs  mod.rs  secure_store.rs
src-tauri/src/browser/: commands.rs  manager.rs  mod.rs  models.rs  navigation.rs  security.rs
src-tauri/src/commands/: analytics.rs  architecture.rs  auth.rs  db.rs  diagnostics.rs  flow.rs  local_fs.rs  mod.rs  notifications.rs  repo.rs  reset.rs  screenshot.rs  simulator.rs  sync.rs  team.rs  update.rs  worktree.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/github/: flow_api.rs  graphql.rs  http.rs  mod.rs  models.rs  queries.rs  repo_api.rs  rest.rs  team_api.rs  user_api.rs
src-tauri/src/sync/: engine.rs
src-tauri/tests/: github_tests.rs  worktree_tests.rs
(+496 files in other folders)
