[package]
name = "github-graph-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "github_graph_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1.52.3", features = ["full"] }
keyring = "4.1.1"
chrono = "0.4.45"
reqwest = { version = "0.13.4", features = ["form", "json", "rustls"] }
url = "2"
base64 = "0.22"

[dev-dependencies]
mockito = "1.4.0"
tempfile = "3.10.1"
